<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GPA_Calculator"
    android:id="@+id/RelativeLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Class_Name"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Credits"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:layout_marginRight="57dp"
        android:layout_marginEnd="57dp"
        android:layout_alignTop="@+id/textView"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Grade"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Num1"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Num2"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="31dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Num3"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Num4"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Num6"
        android:id="@+id/textView9"
        android:layout_marginTop="292dp"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Num5"
        android:id="@+id/textView8"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="243dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ClassET1"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="33dp"
        android:inputType="text"
        android:hint="@string/Class1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ClassET2"
        android:layout_alignLeft="@+id/ClassET1"
        android:layout_alignStart="@+id/ClassET1"
        android:layout_marginTop="78dp"
        android:inputType="text"
        android:hint="@string/Class2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ClassET3"
        android:layout_alignLeft="@+id/ClassET2"
        android:layout_alignStart="@+id/ClassET2"
        android:layout_marginTop="130dp"
        android:inputType="text"
        android:hint="@string/Class3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ClassET4"
        android:layout_alignLeft="@+id/ClassET3"
        android:layout_alignStart="@+id/ClassET3"
        android:layout_marginTop="180dp"
        android:inputType="text"
        android:hint="@string/Class4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ClassET5"
        android:layout_alignLeft="@+id/ClassET4"
        android:layout_alignStart="@+id/ClassET4"
        android:layout_marginTop="225dp"
        android:inputType="text"
        android:hint="@string/Class5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ClassET6"
        android:layout_alignLeft="@+id/ClassET5"
        android:layout_alignStart="@+id/ClassET5"
        android:layout_marginTop="274dp"
        android:inputType="text"
        android:hint="@string/Class6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/CreditET1"
        android:layout_alignTop="@+id/ClassET1"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:hint="@string/Credit1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/CreditET2"
        android:layout_alignTop="@+id/ClassET2"
        android:layout_alignLeft="@+id/CreditET1"
        android:layout_alignStart="@+id/CreditET1"
        android:layout_alignRight="@+id/CreditET1"
        android:layout_alignEnd="@+id/CreditET1"
        android:hint="@string/Credit1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/CreditET3"
        android:layout_above="@+id/textView7"
        android:layout_alignLeft="@+id/CreditET2"
        android:layout_alignStart="@+id/CreditET2"
        android:layout_alignRight="@+id/CreditET2"
        android:layout_alignEnd="@+id/CreditET2"
        android:hint="@string/Credit1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/CreditET4"
        android:layout_alignTop="@+id/ClassET4"
        android:layout_alignLeft="@+id/CreditET3"
        android:layout_alignStart="@+id/CreditET3"
        android:layout_alignRight="@+id/CreditET3"
        android:layout_alignEnd="@+id/CreditET3"
        android:hint="@string/Credit1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/CreditET5"
        android:layout_alignTop="@+id/ClassET5"
        android:layout_alignLeft="@+id/CreditET4"
        android:layout_alignStart="@+id/CreditET4"
        android:layout_alignRight="@+id/CreditET4"
        android:layout_alignEnd="@+id/CreditET4"
        android:hint="@string/Credit1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/CreditET6"
        android:layout_alignTop="@+id/ClassET6"
        android:layout_alignLeft="@+id/CreditET5"
        android:layout_alignStart="@+id/CreditET5"
        android:layout_alignRight="@+id/CreditET5"
        android:layout_alignEnd="@+id/CreditET5"
        android:hint="@string/Credit1" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GradeSpinner1"
        android:spinnerMode="dropdown"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/CreditET1"
        android:layout_toEndOf="@+id/CreditET1" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GradeSpinner2"
        android:layout_marginTop="75dp"
        android:layout_toRightOf="@+id/CreditET1"
        android:layout_toEndOf="@+id/CreditET1" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GradeSpinner3"
        android:layout_toRightOf="@+id/CreditET3"
        android:layout_toEndOf="@+id/CreditET3"
        android:layout_marginTop="117dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GradeSpinner4"
        android:layout_below="@+id/CreditET3"
        android:layout_toRightOf="@+id/CreditET3"
        android:layout_toEndOf="@+id/CreditET3"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GradeSpinner5"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/CreditET4"
        android:layout_toEndOf="@+id/CreditET4"
        android:layout_marginTop="7dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GradeSpinner6"
        android:layout_below="@+id/textView8"
        android:layout_toRightOf="@+id/CreditET5"
        android:layout_toEndOf="@+id/CreditET5"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Current_GPA"
        android:id="@+id/textView10"
        android:layout_below="@+id/GradeSpinner6"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/Current_GPA"
        android:layout_toRightOf="@+id/textView10"
        android:layout_toLeftOf="@+id/CreditET6"
        android:layout_toStartOf="@+id/CreditET6"
        android:layout_marginTop="320dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Current_Credits"
        android:id="@+id/textView11"
        android:layout_below="@+id/GradeSpinner6"
        android:layout_toRightOf="@+id/Current_GPA"
        android:layout_toEndOf="@+id/Current_GPA"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"

        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Semester_GPA"
        android:id="@+id/textView12"
        android:layout_marginTop="365dp"
        android:textStyle="bold"
        android:layout_alignRight="@+id/Current_GPA"
        android:layout_alignEnd="@+id/Current_GPA" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Overall_GPA"
        android:id="@+id/textView13"
        android:textStyle="bold"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginTop="400dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Semester_GPANum"
        android:textStyle="bold"
        android:ems="10"
        android:id="@+id/SemesterGPATV"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="190dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Overall_GPANum"
        android:textStyle="bold"
        android:ems="10"
        android:id="@+id/OverallGPATV"
        android:layout_toRightOf="@+id/Current_GPA"
        android:layout_toEndOf="@+id/Current_GPA"
        android:layout_marginTop="407dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        android:id="@+id/CalculateButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/ClassET6"
        android:layout_alignStart="@+id/ClassET6"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:textStyle="bold" />

</RelativeLayout>
